dev: upgrade containers
many copy-paste from torrust-tracker

- intergration tests are disabled for now.

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -51,4 +51,5 @@ jobs:
         env:
           CARGO_REGISTRY_TOKEN: "${{ secrets.TORRUST_UPDATE_CARGO_REGISTRY_TOKEN }}"
         run: |
+          cargo publish -p torrust-index-located-error
           cargo publish -p torrust-index
