--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -36,13 +36,13 @@ jobs:
           push: false
           load: true
           target: ${{ matrix.target }}
-          tags: torrust-tracker:local
+          tags: torrust-index:local
           cache-from: type=gha
           cache-to: type=gha
 
       - id: inspect
         name: Inspect
-        run: docker image inspect torrust-tracker:local
+        run: docker image inspect torrust-index:local
 
       - id: checkout
         name: Checkout Repository
@@ -66,7 +66,7 @@ jobs:
       - id: check
         name: Check Context
         run: |
-          if [[ "${{ github.repository }}" == "torrust/torrust-tracker" ]]; then
+          if [[ "${{ github.repository }}" == "torrust/torrust-index" ]]; then
             if [[ "${{ github.event_name }}" == "push" ]]; then
               if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
 
