--- a/.dockerignore
+++ b/.dockerignore
@@ -10,11 +10,11 @@
 /config-tracker.local.toml
 /config.local.toml
 /config.toml
+/contrib/dev-tools/container/
 /cspell.json
 /data_v2.db*
 /data.db
 /data.db*
-/docker/
 /project-words.txt
 /README.md
 /rustfmt.toml
