fix: [#342] index container not running for E2E tests

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./Containerfile
-      target: debug     
+      target: release
     tty: true
     environment:
       - TORRUST_INDEX_CONFIG=${TORRUST_INDEX_CONFIG}
