--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,7 @@
 DATABASE_URL=sqlite://storage/database/data.db?mode=rwc
-TORRUST_IDX_BACK_CONFIG=
-TORRUST_IDX_BACK_USER_UID=1000
+TORRUST_INDEX_CONFIG=
+USER_ID=1000
 TORRUST_TRACKER_CONFIG=
 TORRUST_TRACKER_DATABASE_DRIVER=sqlite3
 TORRUST_TRACKER_API_ADMIN_TOKEN=MyAccessToken
+
