fix: [#392] use a different DB for E2E testing
to avoid accidentally overwriting the default database.

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,7 @@ services:
     environment:
       - USER_ID=${USER_ID}
       - TORRUST_INDEX_CONFIG=${TORRUST_INDEX_CONFIG}
+      - TORRUST_INDEX_DATABASE=${TORRUST_INDEX_DATABASE:-e2e_testing_sqlite3}
       - TORRUST_INDEX_DATABASE_DRIVER=${TORRUST_INDEX_DATABASE_DRIVER:-sqlite3}
       - TORRUST_INDEX_TRACKER_API_TOKEN=${TORRUST_INDEX_TRACKER_API_TOKEN:-MyAccessToken}
     networks:
@@ -31,6 +32,7 @@ services:
     environment:
       - USER_ID=${USER_ID}
       - TORRUST_TRACKER_CONFIG=${TORRUST_TRACKER_CONFIG}
+      - TORRUST_TRACKER_DATABASE=${TORRUST_TRACKER_DATABASE:-e2e_testing_sqlite3}
       - TORRUST_TRACKER_DATABASE_DRIVER=${TORRUST_TRACKER_DATABASE_DRIVER:-sqlite3}
       - TORRUST_TRACKER_API_ADMIN_TOKEN=${TORRUST_TRACKER_API_ADMIN_TOKEN:-MyAccessToken}
     networks:
