--- a/share/default/config/index.e2e.container.mysql.toml
+++ b/share/default/config/index.e2e.container.mysql.toml
@@ -24,7 +24,7 @@ max_password_length = 64
 secret_key = "MaxVerstappenWC2021"
 
 [database]
-connect_url = "mysql://root:root_secret_password@mysql:3306/torrust_index"
+connect_url = "mysql://root:root_secret_password@mysql:3306/torrust_index_e2e_testing"
 
 [mail]
 email_verification_enabled = false
