--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,12 +34,14 @@ version = "3.0.0-alpha.3-develop"
 opt-level = 3
 
 [dependencies]
+anyhow = "1.0.79"
 argon2 = "0"
 async-trait = "0"
 axum = { version = "0", features = ["multipart"] }
 binascii = "0"
 bytes = "1"
 chrono = { version = "0", default-features = false, features = ["clock"] }
+clap = { version = "4.4.18", features = ["derive", "env"]}
 config = "0"
 derive_more = "0"
 email_address = "0"
