feat: [#412] allow to overwrite auth secret conf opt with env var
You can overwrite the `auth::secret_key` in the config file:

```toml
[auth]
email_on_signup = "Optional"
min_password_length = 6
max_password_length = 64
secret_key = "MaxVerstappenWC2021"
```

With an env var: `TORRUST_INDEX_AUTH_SECRET_KEY`.

That will make it easier to inject secrets when you use docker without
modifying the configuration file: `config.toml`.

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 DATABASE_URL=sqlite://storage/database/data.db?mode=rwc
 TORRUST_INDEX_CONFIG=
+TORRUST_INDEX_AUTH_SECRET_KEY=MaxVerstappenWC2021
 USER_ID=1000
 TORRUST_TRACKER_CONFIG=
 TORRUST_TRACKER_DATABASE_DRIVER=sqlite3
 TORRUST_TRACKER_API_ADMIN_TOKEN=MyAccessToken
-
