--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,7 +74,7 @@ thiserror = "1"
 tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
 toml = "0"
 torrust-index-located-error = { version = "3.0.0-alpha.3-develop", path = "packages/located-error" }
-tower-http = { version = "0", features = ["compression-full", "cors", "trace"] }
+tower-http = { version = "0", features = ["compression-full", "cors", "trace", "propagate-header", "request-id"] }
 trace = "0.1.7"
 tracing = "0.1.40"
 urlencoding = "2"
