chore(deps): udpate dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,8 @@ email_address = "0"
 fern = "0"
 futures = "0"
 hex = "0"
-hyper = "0"
+http = "1.0.0"
+hyper = "1"
 indexmap = "2"
 jsonwebtoken = "9"
 lazy_static = "1.4.0"
