--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ jsonwebtoken = "9"
 lazy_static = "1.4.0"
 lettre = { version = "0", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls", "tokio1-rustls-tls"] }
 log = "0"
+mockall = "0.12.1"
 pbkdf2 = { version = "0", features = ["simple"] }
 rand = "0"
 rand_core = { version = "0", features = ["std"] }
