--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ anyhow = "1.0.81"
 argon2 = "0"
 async-trait = "0"
 axum = { version = "0", features = ["multipart"] }
+axum-server = { version = "0", features = ["tls-rustls"] }
 binascii = "0"
 bytes = "1"
 chrono = { version = "0", default-features = false, features = ["clock"] }
@@ -46,15 +47,19 @@ derive_more = "0"
 email_address = "0"
 fern = "0"
 futures = "0"
+futures-util = "0.3.30"
 hex = "0"
 http = "1.1.0"
+http-body = "1.0.0"
 hyper = "1"
+hyper-util = { version = "0.1.3", features = ["http1", "http2", "tokio"] }
 indexmap = "2"
 jsonwebtoken = "9"
 lazy_static = "1.4.0"
 lettre = { version = "0", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls", "tokio1-rustls-tls"] }
 log = "0"
 pbkdf2 = { version = "0", features = ["simple"] }
+pin-project-lite = "0.2"
 rand = "0"
 rand_core = { version = "0", features = ["std"] }
 regex = "1"
@@ -74,6 +79,7 @@ thiserror = "1"
 tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
 toml = "0"
 torrust-index-located-error = { version = "3.0.0-alpha.3-develop", path = "packages/located-error" }
+tower = { version = "0.4", features = ["timeout"] }
 tower-http = { version = "0", features = ["compression-full", "cors", "propagate-header", "request-id", "trace"] }
 trace = "0.1.7"
 tracing = "0.1.40"
