--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ config = "0"
 derive_more = "0"
 email_address = "0"
 fern = "0"
+figment = { version = "0.10", features = ["env", "test", "toml"] }
 futures = "0"
 futures-util = "0.3.30"
 hex = "0"
