refactor: [#596] rename env vars
```
TORRUST_INDEX_CONFIG             -> TORRUST_INDEX_CONFIG_TOML
TORRUST_INDEX_PATH_CONFIG        -> TORRUST_INDEX_CONFIG_TOML_PATH
TORRUST_INDEX_TRACKER_API_TOKEN  -> TORRUST_INDEX_CONFIG_OVERRIDE_TRACKER__TOKEN
TORRUST_INDEX_AUTH_SECRET_KEY    -> TORRUST_INDEX_CONFIG_OVERRIDE_AUTH__SECRET_KEY
```

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,11 +9,11 @@ services:
     tty: true
     environment:
       - USER_ID=${USER_ID}
-      - TORRUST_INDEX_CONFIG=${TORRUST_INDEX_CONFIG}
+      - TORRUST_INDEX_CONFIG_TOML=${TORRUST_INDEX_CONFIG_TOML}
       - TORRUST_INDEX_DATABASE=${TORRUST_INDEX_DATABASE:-e2e_testing_sqlite3}
       - TORRUST_INDEX_DATABASE_DRIVER=${TORRUST_INDEX_DATABASE_DRIVER:-sqlite3}
-      - TORRUST_INDEX_TRACKER_API_TOKEN=${TORRUST_INDEX_TRACKER_API_TOKEN:-MyAccessToken}
-      - TORRUST_INDEX_AUTH_SECRET_KEY=${TORRUST_INDEX_AUTH_SECRET_KEY:-MaxVerstappenWC2021}
+      - TORRUST_INDEX_CONFIG_OVERRIDE_TRACKER__TOKEN=${TORRUST_INDEX_CONFIG_OVERRIDE_TRACKER__TOKEN:-MyAccessToken}
+      - TORRUST_INDEX_CONFIG_OVERRIDE_AUTH__SECRET_KEY=${TORRUST_INDEX_CONFIG_OVERRIDE_AUTH__SECRET_KEY:-MaxVerstappenWC2021}
     networks:
       - server_side
     ports:
