--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,14 @@ hyper-util = { version = "0.1.3", features = ["http1", "http2", "tokio"] }
 indexmap = "2"
 jsonwebtoken = "9"
 lazy_static = "1.4.0"
-lettre = { version = "0", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls", "tokio1-rustls-tls"] }
+lettre = { version = "0", features = [
+    "builder",
+    "file-transport-envelope",
+    "smtp-transport",
+    "tokio1",
+    "tokio1-native-tls",
+    "tokio1-rustls-tls",
+] }
 log = "0"
 pbkdf2 = { version = "0", features = ["simple"] }
 pin-project-lite = "0.2"
