refactor: [#599] extract types for config::v1::tracker::Tracker

--- a/share/default/config/index.development.sqlite3.toml
+++ b/share/default/config/index.development.sqlite3.toml
@@ -4,7 +4,7 @@ log_level = "info"
 name = "Torrust"
 
 [tracker]
-api_url = "http://localhost:1212"
+api_url = "http://localhost:1212/"
 mode = "Public"
 token = "MyAccessToken"
 token_valid_seconds = 7257600
