refactor: [#603] remove default values from config toml templates
Not it's possible to specify only values when you wan to overrride
default values.

--- a/share/default/config/index.container.sqlite3.toml
+++ b/share/default/config/index.container.sqlite3.toml
@@ -1,51 +1,12 @@
+# Please override the following settings with environmental variable!
+# tracker::token   -> `TORRUST_INDEX_CONFIG_OVERRIDE_TRACKER__TOKEN`
+# auth::secret_key -> `TORRUST_INDEX_CONFIG_OVERRIDE_AUTH__SECRET_KEY`
+
 log_level = "info"
-
-[website]
-name = "Torrust"
-
-# Please override the tracker token setting the
-#    `TORRUST_INDEX_CONFIG_OVERRIDE_TRACKER__TOKEN`
-#                     environmental variable!
-
-[tracker]
-url = "udp://tracker:6969"
-mode = "Public"
-api_url = "http://tracker:1212"
-token = "MyAccessToken"
-token_valid_seconds = 7257600
-
-[net]
-port = 3001
-
-[auth]
-email_on_signup = "Optional"
-min_password_length = 6
-max_password_length = 64
-secret_key = "MaxVerstappenWC2021"
 
 [database]
 connect_url = "sqlite:///var/lib/torrust/index/database/sqlite3.db?mode=rwc"
 
 [mail]
-email_verification_enabled = false
-from = "example@email.com"
-reply_to = "noreply@email.com"
-username = ""
-password = ""
-server = "mailcatcher"
 port = 1025
-
-[image_cache]
-max_request_timeout_ms = 1000
-capacity = 128000000
-entry_size_limit = 4000000
-user_quota_period_seconds = 3600
-user_quota_bytes = 64000000
-
-[api]
-default_torrent_page_size = 10
-max_torrent_page_size = 30
-
-[tracker_statistics_importer]
-torrent_info_update_interval = 3600
-port = 3002
+server = "mailcatcher"
