--- a/share/default/config/index.development.sqlite3.toml
+++ b/share/default/config/index.development.sqlite3.toml
@@ -1,52 +1,10 @@
+# Please override the following settings with environmental variable!
+# tracker::token   -> `TORRUST_INDEX_CONFIG_OVERRIDE_TRACKER__TOKEN`
+# auth::secret_key -> `TORRUST_INDEX_CONFIG_OVERRIDE_AUTH__SECRET_KEY`
+
 log_level = "info"
-
-[website]
-name = "Torrust"
-
-[tracker]
-api_url = "http://localhost:1212/"
-mode = "Public"
-token = "MyAccessToken"
-token_valid_seconds = 7257600
-url = "udp://localhost:6969"
-
-[net]
-port = 3001
 
 # Uncomment if you want to enable TSL for development
 #[net.tsl]
 #ssl_cert_path = "./storage/index/lib/tls/localhost.crt"
 #ssl_key_path = "./storage/index/lib/tls/localhost.key"
-
-[auth]
-email_on_signup = "Optional"
-max_password_length = 64
-min_password_length = 6
-secret_key = "MaxVerstappenWC2021"
-
-[database]
-connect_url = "sqlite://data.db?mode=rwc"
-
-[mail]
-email_verification_enabled = false
-from = "example@email.com"
-password = ""
-port = 25
-reply_to = "noreply@email.com"
-server = ""
-username = ""
-
-[image_cache]
-capacity = 128000000
-entry_size_limit = 4000000
-max_request_timeout_ms = 1000
-user_quota_bytes = 64000000
-user_quota_period_seconds = 3600
-
-[api]
-default_torrent_page_size = 10
-max_torrent_page_size = 30
-
-[tracker_statistics_importer]
-port = 3002
-torrent_info_update_interval = 3600
