--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ hyper = "1"
 hyper-util = { version = "0.1.3", features = ["http1", "http2", "tokio"] }
 indexmap = "2"
 jsonwebtoken = "9"
+mockall = "0.12.1"
 lazy_static = "1.4.0"
 lettre = { version = "0", features = [
     "builder",
