--- a/packages/located-error/Cargo.toml
+++ b/packages/located-error/Cargo.toml
@@ -15,7 +15,8 @@ rust-version.workspace = true
 version.workspace = true
 
 [dependencies]
-log = { version = "0", features = ["release_max_level_info"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["json"] }
 
 [dev-dependencies]
 thiserror = "1.0"
