feat!: [#591] config v2, tracker mode from tracker
Normalize TrackerMode enum to use the same values as in the Tracker.

```rust
pub enum TrackerMode {
    /// Will track every new info hash and serve every peer.
    #[serde(rename = "public")]
    Public,

    /// Will only track whitelisted info hashes.
    #[serde(rename = "listed")]
    Listed,

    /// Will only serve authenticated peers
    #[serde(rename = "private")]
    Private,

    /// Will only track whitelisted info hashes and serve authenticated peers
    #[serde(rename = "private_listed")]
    PrivateListed,
}
```

That will enable to use the TrackerMode defined in
https://crates.io/crates/torrust-tracker-primitives for TrackerMode in
the future when a new version of that crate is released.

--- a/share/default/config/index.private.e2e.container.sqlite3.toml
+++ b/share/default/config/index.private.e2e.container.sqlite3.toml
@@ -2,7 +2,7 @@ log_level = "info"
 
 [tracker]
 api_url = "http://tracker:1212"
-mode = "Private"
+mode = "private"
 url = "http://tracker:7070"
 
 [database]
