feat!: [#591] extract new types for SMTP server configuration
From:

```toml
[mail]
email_verification_enabled = false
from = "example@email.com"
password = ""
port = 25
reply_to = "noreply@email.com"
server = ""
username = ""
```

To:

```toml
[mail]
email_verification_enabled = false
from = "example@email.com"
reply_to = "noreply@email.com"

[mail.smtp]
port = 25
server = ""

[mail.smtp.credentials]
password = ""
username = ""
```

--- a/share/default/config/index.container.sqlite3.toml
+++ b/share/default/config/index.container.sqlite3.toml
@@ -4,6 +4,6 @@ log_level = "info"
 [database]
 connect_url = "sqlite:///var/lib/torrust/index/database/sqlite3.db?mode=rwc"
 
-[mail]
+[mail.smtp]
 port = 1025
 server = "mailcatcher"
