--- a/share/default/config/index.private.e2e.container.sqlite3.toml
+++ b/share/default/config/index.private.e2e.container.sqlite3.toml
@@ -9,6 +9,6 @@ url = "http://tracker:7070"
 [database]
 connect_url = "sqlite:///var/lib/torrust/index/database/e2e_testing_sqlite3.db?mode=rwc"
 
-[mail]
+[mail.smtp]
 port = 1025
 server = "mailcatcher"
