--- a/share/default/config/index.public.e2e.container.mysql.toml
+++ b/share/default/config/index.public.e2e.container.mysql.toml
@@ -8,6 +8,6 @@ url = "udp://tracker:6969"
 [database]
 connect_url = "mysql://root:root_secret_password@mysql:3306/torrust_index_e2e_testing"
 
-[mail]
+[mail.smtp]
 port = 1025
 server = "mailcatcher"
