--- a/share/default/config/index.container.mysql.toml
+++ b/share/default/config/index.container.mysql.toml
@@ -4,6 +4,7 @@ log_level = "info"
 [database]
 connect_url = "mysql://root:root_secret_password@mysql:3306/torrust_index"
 
-[mail]
+[mail.smtp]
 port = 1025
 server = "mailcatcher"
+
