fix: [#635] udpate tracker config
Tracker toml config has introduced breaking changes.

--- a/share/default/config/tracker.private.e2e.container.sqlite3.toml
+++ b/share/default/config/tracker.private.e2e.container.sqlite3.toml
@@ -1,9 +1,12 @@
-db_driver = "Sqlite3"
-db_path = "/var/lib/torrust/tracker/database/e2e_testing_sqlite3.db"
+[core]
 mode = "private"
 
+[core.database]
+driver = "Sqlite3"
+path = "/var/lib/torrust/tracker/database/e2e_testing_sqlite3.db"
+
 [[udp_trackers]]
-enabled = false
+bind_address = "0.0.0.0:6969"
 
 [http_api]
 bind_address = "0.0.0.0:1212"
