--- a/share/default/config/tracker.public.e2e.container.sqlite3.toml
+++ b/share/default/config/tracker.public.e2e.container.sqlite3.toml
@@ -1,6 +1,12 @@
-db_driver = "Sqlite3"
-db_path = "/var/lib/torrust/tracker/database/e2e_testing_sqlite3.db"
+[core]
 mode = "public"
+
+[core.database]
+driver = "Sqlite3"
+path = "/var/lib/torrust/tracker/database/e2e_testing_sqlite3.db"
+
+[[http_trackers]]
+bind_address = "0.0.0.0:7070"
 
 [http_api]
 bind_address = "0.0.0.0:1212"
