feat: [#655] remove tracker mode in config
Update the tracker configuration section to follow [changes in the tracker configuration](https://github.com/torrust/torrust-tracker/issues/932).

```toml
[tracker]
mode = "public"
```

```toml
[tracker]
private = false
listed = false
```

--- a/share/default/config/index.private.e2e.container.sqlite3.toml
+++ b/share/default/config/index.private.e2e.container.sqlite3.toml
@@ -10,7 +10,8 @@ threshold = "info"
 
 [tracker]
 api_url = "http://tracker:1212"
-mode = "private"
+listed = false
+private = true
 url = "http://tracker:7070"
 
 [database]
