feat: [#654] new registration confg section
Registration Disabled:

```toml
```

Registration without email option:

```toml
[registration]
```

Registration optionally including an email address:

```toml
[registration]
[registration.email]
```

Registration with  email:

```toml
[registration]
[registration.email]
required = true
```

Registration with optional email, but if email is supplied it is verified:

```toml
[registration]
[registration.email]
verified = true
```

Registration with email and email is verified:

```toml
[registration]
[registration.email]
required = true
verified = true
```

TODO: remove old settings and use the new ones.

--- a/share/default/config/index.container.mysql.toml
+++ b/share/default/config/index.container.mysql.toml
@@ -15,3 +15,5 @@ connect_url = "mysql://root:root_secret_password@mysql:3306/torrust_index"
 port = 1025
 server = "mailcatcher"
 
+[registration]
+[registration.email]
