--- a/share/default/config/tracker.private.e2e.container.sqlite3.toml
+++ b/share/default/config/tracker.private.e2e.container.sqlite3.toml
@@ -1,6 +1,11 @@
-version = "2"
+[metadata]
+schema_version = "2.0.0"
+
+[logging]
+threshold = "info"
 
 [core]
+listed = false
 private = true
 
 [core.database]
