--- a/share/default/config/tracker.public.e2e.container.sqlite3.toml
+++ b/share/default/config/tracker.public.e2e.container.sqlite3.toml
@@ -1,7 +1,12 @@
-version = "2"
+[metadata]
+schema_version = "2.0.0"
+
+[logging]
+threshold = "info"
 
 [core]
-private = true
+listed = false
+private = false
 
 [core.database]
 driver = "sqlite3"
