fix: [710] make secrets in config options mandatory
- `tracker.token`
- `auth.user_claim_token_pepper`

It keeps the default for the SMPT server credential ebcuase they are not
always needed.

- `mail.smpt.credentials.password`

--- a/share/default/config/index.container.sqlite3.toml
+++ b/share/default/config/index.container.sqlite3.toml
@@ -11,6 +11,12 @@ threshold = "info"
 #threshold = "debug"
 #threshold = "trace"
 
+[tracker]
+token = "MyAccessToken"
+
+[auth]
+user_claim_token_pepper = "MaxVerstappenWC2021"
+
 [database]
 connect_url = "sqlite:///var/lib/torrust/index/database/sqlite3.db?mode=rwc"
 
