--- a/share/default/config/index.private.e2e.container.sqlite3.toml
+++ b/share/default/config/index.private.e2e.container.sqlite3.toml
@@ -15,7 +15,11 @@ threshold = "info"
 api_url = "http://tracker:1212"
 listed = false
 private = true
+token = "MyAccessToken"
 url = "http://tracker:7070"
+
+[auth]
+user_claim_token_pepper = "MaxVerstappenWC2021"
 
 [database]
 connect_url = "sqlite:///var/lib/torrust/index/database/e2e_testing_sqlite3.db?mode=rwc"
