--- a/share/default/config/index.public.e2e.container.sqlite3.toml
+++ b/share/default/config/index.public.e2e.container.sqlite3.toml
@@ -13,7 +13,11 @@ threshold = "info"
 
 [tracker]
 api_url = "http://tracker:1212"
+token = "MyAccessToken"
 url = "udp://tracker:6969"
+
+[auth]
+user_claim_token_pepper = "MaxVerstappenWC2021"
 
 [database]
 connect_url = "sqlite:///var/lib/torrust/index/database/e2e_testing_sqlite3.db?mode=rwc"
