--- a/share/default/config/tracker.private.e2e.container.sqlite3.toml
+++ b/share/default/config/tracker.private.e2e.container.sqlite3.toml
@@ -4,6 +4,12 @@ schema_version = "2.0.0"
 [logging]
 threshold = "info"
 
+[tracker]
+token = "MyAccessToken"
+
+[auth]
+user_claim_token_pepper = "MaxVerstappenWC2021"
+
 [core]
 listed = false
 private = true
@@ -17,4 +23,3 @@ bind_address = "0.0.0.0:6969"
 
 [http_api]
 bind_address = "0.0.0.0:1212"
-
