--- a/share/default/config/index.container.mysql.toml
+++ b/share/default/config/index.container.mysql.toml
@@ -11,6 +11,12 @@ threshold = "info"
 #threshold = "debug"
 #threshold = "trace"
 
+[tracker]
+token = "MyAccessToken"
+
+[auth]
+user_claim_token_pepper = "MaxVerstappenWC2021"
+
 [database]
 connect_url = "mysql://root:root_secret_password@mysql:3306/torrust_index"
 
