--- a/share/default/config/index.public.e2e.container.mysql.toml
+++ b/share/default/config/index.public.e2e.container.mysql.toml
@@ -13,7 +13,11 @@ threshold = "info"
 
 [tracker]
 api_url = "http://tracker:1212"
+token = "MyAccessToken"
 url = "udp://tracker:6969"
+
+[auth]
+user_claim_token_pepper = "MaxVerstappenWC2021"
 
 [database]
 connect_url = "mysql://root:root_secret_password@mysql:3306/torrust_index_e2e_testing"
