--- a/share/default/config/tracker.public.e2e.container.sqlite3.toml
+++ b/share/default/config/tracker.public.e2e.container.sqlite3.toml
@@ -4,6 +4,12 @@ schema_version = "2.0.0"
 [logging]
 threshold = "info"
 
+[tracker]
+token = "MyAccessToken"
+
+[auth]
+user_claim_token_pepper = "MaxVerstappenWC2021"
+
 [core]
 listed = false
 private = false
