--- a/share/default/config/index.development.sqlite3.toml
+++ b/share/default/config/index.development.sqlite3.toml
@@ -3,6 +3,8 @@ app = "torrust-index"
 purpose = "configuration"
 schema_version = "2.0.0"
 
+[website.demo]
+
 [logging]
 #threshold = "off"
 #threshold = "error"
