ci: make tempory exception for  lint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,3 +111,6 @@ pedantic = { level = "deny", priority = -1 }
 perf = { level = "deny", priority = -1 }
 style = { level = "deny", priority = -1 }
 suspicious = { level = "deny", priority = -1 }
+
+# temp allow this lint
+needless_return = "allow"
