--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -28,23 +28,18 @@ jobs:
         name: Enable Workflow Cache
         uses: Swatinem/rust-cache@v2
 
-      # Temporary Cleaning to avoid Rust Compiler Bug
-      - id: clean
-        name: Make Build Clean
-        run: cargo clean
-
       - id: format
         name: Run Formatting-Checks
         run: cargo fmt --check
 
-  check:
+ check:
     name: Static Analysis
     runs-on: ubuntu-latest
     needs: format
 
     strategy:
       matrix:
-        toolchain: [stable, nightly]
+        toolchain: [nightly, stable]
 
     steps:
       - id: checkout
@@ -62,11 +57,6 @@ jobs:
         name: Enable Workflow Cache
         uses: Swatinem/rust-cache@v2
 
-      # Temporary Cleaning to avoid Rust Compiler Bug
-      - id: clean
-        name: Make Build Clean
-        run: cargo clean
-
       - id: check
         name: Run Build Checks
         run: cargo check --tests --benches --examples --workspace --all-targets --all-features
@@ -81,6 +71,8 @@ jobs:
           RUSTDOCFLAGS: "-D warnings"
         run: cargo doc --no-deps --bins --examples --workspace --all-features
 
+
+
   unit:
     name: Units
     runs-on: ubuntu-latest
@@ -88,7 +80,7 @@ jobs:
 
     strategy:
       matrix:
-        toolchain: [stable, nightly]
+        toolchain: [nightly, stable]
 
     steps:
       - id: checkout
@@ -105,11 +97,6 @@ jobs:
       - id: cache
         name: Enable Job Cache
         uses: Swatinem/rust-cache@v2
-
-      # Temporary Cleaning to avoid Rust Compiler Bug
-      - id: clean
-        name: Make Build Clean
-        run: cargo clean
 
       - id: imdl
         name: Install Intermodal
@@ -130,7 +117,7 @@ jobs:
 
     strategy:
       matrix:
-        toolchain: [stable, nightly]
+        toolchain: [nightly, stable]
 
     steps:
       - id: checkout
@@ -147,10 +134,6 @@ jobs:
         name: Enable Job Cache
         uses: Swatinem/rust-cache@v2
 
-      # Temporary Cleaning to avoid Rust Compiler Bug
-      - id: clean
-        name: Make Build Clean
-        run: cargo clean
 
       - id: test-sqlite
         name: Run Integration Tests (SQLite)
