--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -32,7 +32,7 @@ jobs:
         name: Run Formatting-Checks
         run: cargo fmt --check
 
- check:
+  check:
     name: Static Analysis
     runs-on: ubuntu-latest
     needs: format
@@ -57,6 +57,12 @@ jobs:
         name: Enable Workflow Cache
         uses: Swatinem/rust-cache@v2
 
+      - id: tools
+        name: Install Tools
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-machete
+
       - id: check
         name: Run Build Checks
         run: cargo check --tests --benches --examples --workspace --all-targets --all-features
@@ -71,7 +77,13 @@ jobs:
           RUSTDOCFLAGS: "-D warnings"
         run: cargo doc --no-deps --bins --examples --workspace --all-features
 
+      - id: clean
+        name: Clean Build Directory
+        run: cargo clean
 
+      - id: deps
+        name: Check Unused Dependencies
+        run: cargo machete
 
   unit:
     name: Units
@@ -133,7 +145,6 @@ jobs:
       - id: cache
         name: Enable Job Cache
         uses: Swatinem/rust-cache@v2
-
 
       - id: test-sqlite
         name: Run Integration Tests (SQLite)
