--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,31 +33,32 @@ version = "3.0.0-develop"
 opt-level = 3
 
 [dependencies]
-anyhow = "1.0.81"
+torrust-index-located-error = { version = "3.0.0-develop", path = "packages/located-error" }
+
+anyhow = "1"
 argon2 = "0"
 async-trait = "0"
 axum = { version = "0", features = ["multipart"] }
 axum-server = { version = "0", features = ["tls-rustls"] }
 binascii = "0"
 bytes = "1"
-camino = { version = "1.1.6", features = ["serde"] }
-casbin = "2.2.0"
+camino = { version = "1", features = ["serde"] }
+casbin = "2"
 chrono = { version = "0", default-features = false, features = ["clock"] }
-clap = { version = "4.5.4", features = ["derive", "env"] }
+clap = { version = "4", features = ["derive", "env"] }
 derive_more = "0"
 email_address = "0"
-fern = "0"
-figment = { version = "0.10", features = ["env", "test", "toml"] }
+figment = { version = "0", features = ["env", "test", "toml"] }
 futures = "0"
-futures-util = "0.3.30"
+futures-util = "0"
 hex = "0"
-http = "1.1.0"
-http-body = "1.0.0"
+http = "1"
+http-body = "1"
 hyper = "1"
-hyper-util = { version = "0.1.3", features = ["http1", "http2", "tokio"] }
+hyper-util = { version = "0", features = ["http1", "http2", "tokio"] }
 indexmap = "2"
 jsonwebtoken = "9"
-lazy_static = "1.4.0"
+lazy_static = "1"
 lettre = { version = "0", features = [
     "builder",
     "file-transport-envelope",
@@ -67,20 +68,19 @@ lettre = { version = "0", features = [
     "tokio1-rustls-tls",
 ] }
 log = "0"
-mockall = "0.13.0"
+mockall = "0"
 pbkdf2 = { version = "0", features = ["simple"] }
-pin-project-lite = "0.2"
+pin-project-lite = "0"
 rand = "0"
 rand_core = { version = "0", features = ["std"] }
 regex = "1"
 reqwest = { version = "0", features = ["json", "multipart"] }
-rustversion = "1.0.14"
 serde = { version = "1", features = ["derive", "rc"] }
 serde_bencode = "0"
 serde_bytes = "0"
 serde_derive = "1"
 serde_json = "1"
-serde_with = "3.8.1"
+serde_with = "3"
 sha-1 = "0"
 sqlx = { version = "0", features = ["migrate", "mysql", "runtime-tokio-native-tls", "sqlite", "time"] }
 tera = { version = "1", default-features = false }
@@ -89,13 +89,11 @@ text-to-png = "0"
 thiserror = "1"
 tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
 toml = "0"
-torrust-index-located-error = { version = "3.0.0-develop", path = "packages/located-error" }
-tower = { version = "0.4", features = ["timeout"] }
+tower = { version = "0", features = ["timeout"] }
 tower-http = { version = "0", features = ["compression-full", "cors", "propagate-header", "request-id", "trace"] }
-trace = "0.1.7"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["json"] }
-url = { version = "2.5.0", features = ["serde"] }
+tracing = "0"
+tracing-subscriber = { version = "0", features = ["json"] }
+url = { version = "2", features = ["serde"] }
 urlencoding = "2"
 uuid = { version = "1", features = ["v4"] }
 
@@ -103,6 +101,9 @@ uuid = { version = "1", features = ["v4"] }
 tempfile = "3"
 uuid = { version = "1", features = ["v4"] }
 which = "6"
+
+[package.metadata.cargo-machete]
+ignored = ["sha-1"]
 
 [lints.clippy]
 complexity = { level = "deny", priority = -1 }
